@@ -8,7 +8,9 @@
  -------------------
 
 Emulator:
-- Command completion support in debugger
+- Debugger improvements:
+  - trace command
+  - command and command argument completion support
 
 
  Version 1.3.1 (2009-09-05):
